# loop-engineer

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: ROADMAP-v1.0.md  demo.cast  metrics-baseline.json
docs/adr/: 0001-proof-kernel-and-runtime.md
docs/contributing/issues/: 01-good-first-qw9-trigger-phrases.md  02-good-first-qw10-self-eval-labels.md  03-good-first-emit-metrics-vocabulary.md  04-help-wanted-openhands-recipe.md  05-help-wanted-ruflo-recipe.md  06-help-wanted-gap-reports.md  07-good-first-emit-scaffold-runlog-seed.md  07-help-wanted-emit-scaffold-runlog-seed.md
docs/gap-reports/: scoreboard.md  superpowers.md
docs/integrations/: langgraph.md  temporal.md
docs/superpowers/plans/: 2026-06-20-loop-engineer-v1.md  2026-06-30-loop-engineer-v1.0-roadmap.md  2026-07-03-adoption-slices.md  2026-07-08-v0.8.0-composes-the-field.md  2026-07-09-st5-harness-scoreboard.md
docs/superpowers/specs/: 2026-06-20-loop-engineer-design.md  2026-06-30-st1-metrics-baseline.md  2026-06-30-st2-portable-contract-spec.md  2026-06-30-st3-integration-adapters.md  2026-06-30-v04-credibility-enforcement.md  2026-07-03-adoption-slices-design.md  2026-07-08-v0.8.0-composes-the-field-design.md  2026-07-09-st5-harness-scoreboard-design.md
evals/: rubric.md
evals/cases/: structural.json
examples/agent-os-run/: README.md
examples/bmad-run/: README.md
examples/bmad-run/src/: import_contacts.py
examples/bmad-run/tests/: test_import_contacts.py
examples/ccpm-run/: README.md
examples/coverage-repair/: ADR.md  README.md  RUNLOG.md  SPEC.md  TASKS.json  WORKFLOW.md  repair-record.json  terminal_state.json
examples/coverage-repair/.loop/: manifest.yaml  state.json
examples/coverage-repair/scripts/: run-example  verify-fast  verify-full
examples/evidence/: valid-evidence.json
examples/evidence/invalid/: absolute-uri.json  bad-sha256-pattern.json  missing-required-field.json  (+1 more)
examples/flaky-test-triage/: README.md  RUNLOG.md  SPEC.md  TASKS.json  WORKFLOW.md
examples/langgraph-emit/: README.md  graph_example.py
examples/naive-loop/: README.md
examples/openspec-run/: README.md
examples/plans/: coverage-repair.plan.json
examples/prp-run/: README.md
examples/ruflo-run/: .mcp.json  README.md
examples/spec-kit-run/: README.md
examples/superpowers-run/: README.md
examples/task-master-run/: CLAUDE.md  README.md
examples/temporal-certify/: README.md  workflow_example.py
hooks/: stop_firewall.py
loop/: __init__.py  __main__.py  _resources.py  architect.py  completion.py  contract.py  emit.py  events.py  evidence.py  foreign.py  fsm.py  integrations.py  paths.py  plan.py  reducer.py  runcontrol.py  runner.py  runtime.py  scaffold.py  simulate.py
reference/: architecture-matrix.md  eval-suite.md  loop-patterns.md  model-routing.md  platform-map.md  prompt-templates.md  repo-os-contract.md  safety-and-approvals.md
schemas/: event.schema.json  evidence.schema.json  manifest.schema.json  plan.schema.json  receipt.schema.json  repair-record.schema.json  rollout-record.schema.json  state.schema.json  tasks.schema.json  terminal.schema.json
scripts/: action_scorecard.py  anticheat_scan.py  benchmark_harness.py  holdout_gate.py  inspect_loop.py  metrics.py  rollout_ledger.py  runtime_monitor.py  self_eval.py  test_action_scorecard.py  test_adversarial_kernel.py  test_adversarial_process.py  test_anticheat_scan.py  test_benchmark_harness.py  test_ci_release_mode.py  test_completion_policy.py  test_conformance.py  test_contract_records.py  test_docs_adoption.py  test_docs_baseline.py  test_docs_claims.py  test_docs_version.py  test_doctor_eventstore.py  test_emit.py  test_eventstore.py  test_evidence.py  test_example_runnable.py  test_flaky_example.py  test_foreign_inspect.py  test_fsm.py  test_holdout_gate.py  test_inspect_loop.py  test_integrations.py  test_langgraph_recipe.py  test_langgraph_recipe_st3.py  test_loop_architect_cli.py  test_loop_cli.py  test_loop_cli_status_replay.py  test_loop_contract_core.py  test_loop_runcontrol_cli.py  (+23 more)
skills/loop-architect/: SKILL.md
skills/loop-contract/: SKILL.md
skills/loop-engineer/: SKILL.md
skills/loop-evals/: SKILL.md
skills/loop-flywheel/: SKILL.md
skills/loop-inspector/: SKILL.md
skills/loop-repair/: SKILL.md
skills/loop-run/: SKILL.md
skills/loop-runtime-monitor/: SKILL.md
templates/: AGENTS.md.tmpl  EVALS-rubric.md.tmpl  RUNLOG.md.tmpl  SPEC.md.tmpl  TASKS.json.tmpl  WORKFLOW.md.tmpl  extract-trace-metrics.sh  judge-rubric.sh  manifest.yaml.tmpl  state.json.tmpl  terminal_state.json.tmpl  verify-fast.sh  verify-full.sh  verify-safety.sh
(+78 files in other folders)
