[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loop-engineer"
version = "0.5.0"
description = "Portable Loop Contract Core: validate and inspect repo-native operating contracts for agent loops."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Sollan Systems" }]
keywords = ["agent", "loop", "agentic", "verification", "harness", "orchestration", "self-improvement", "claude-code", "eval", "repair"]

# The core is pure-stdlib. Two optional extras enrich validation when present:
#   yaml     — PyYAML parses the manifest; absent, loop/contract.py falls back to
#              a stdlib subset parser.
#   schemas  — jsonschema runs real JSON-Schema validation against schemas/*.json;
#              absent, loop/contract.py falls back to structural hand checks.
# So `pip install -e .` pulls in zero third-party runtime dependencies.
[project.optional-dependencies]
yaml = ["pyyaml>=6"]
schemas = ["jsonschema>=4"]

[project.urls]
Homepage = "https://github.com/SollanSystems/loop-engineer"
Repository = "https://github.com/SollanSystems/loop-engineer"

# Editable install is the supported mode: `python3 -m loop inspect` resolves the
# bundled scripts/ dir relative to the repo, so install with `pip install -e .`
# to run the CLI from any directory.
[tool.hatch.build.targets.wheel]
packages = ["loop"]
